--- a/beranda.html
+++ b/beranda.html
@@ -16,19 +16,18 @@
   <body>
     <input type="checkbox" id="checkbox" />
     <header class="header">
-      <label for="checkbox">
-        <i id="navbtn" class="fa fa-bars" aria-hidden="true"></i>
-      </label>
+      
       <div class="right_area">
         <h3>SORUM MOTOR</h3>
       </div>
     </header>
     <div class="body">
       <nav class="side-bar">
-        <div class="user-p">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyHloBy1CTrkPw-ISqr0H-roDokT98P8Gumw&usqp=CAU" />
-        </div>
+        
         <ul>
+          <label for="checkbox">
+            <i id="navbtn" class="fa fa-bars" aria-hidden="true"><a href="index.html"></a>MENU</i>
+          </label>
           <li>
             <a href="index.html">
               <i class="bi bi-house" aria-hidden="true"></i>
@@ -38,6 +37,12 @@
           <li>
             <a href="penerbit.html">
               <i class="fa-solid fa-tornado"></i>
+              <span>BRAND</span>
+            </a>
+          </li>
+          <li>
+            <a href="buku.html">
+                <i class="fa-solid fa-icicles"></i>
               <span>YAMAHA</span>
             </a>
           </li>
@@ -57,9 +62,5 @@
       </nav>
     </div>
   </body>
-  <footer>
-    <div class="text">
-      <h3>copyright 2023 ° Created by OUR SORUM MOTORX</h3>
-    </div>
-  </footer>
+  
 </html>
